# tinyendian

./: .gitignore  .travis.yml  README.html  README.md  README.rst  appveyor.yml  dub.json  hmod.cfg  meson.build  shippable.yml
doc/: index.html  search.js  tinyendian.html
doc/tinyendian/: UTFEncoding.html
source/: tinyendian.d
